made submit an icon

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "webpack.config.js",
   "dependencies": {
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-transition-group": "^2.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
